[package]
name = "sentry-relay"
version = "0.1.0"
authors = ["Brett Hoerner <brett@sentry.io>"]
repository = "https://github.com/getsentry/sentry-relay"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
backtrace = "^0.3"
log = "^0.3"
env_logger = "^0.4"
error-chain = "^0.10"
serde_json = "^0.9"
serde_derive = "^0.9"
serde = "^0.9"
hyper = "^0.10"
hyper-native-tls = "^0.2"
if_chain = "^0.1"
lazy_static = "^0.2"
clap = "^2.23"
term = "^0.4"
regex = "^0.2"
chrono = "^0.3"
# diesel = "^0.12"